// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "key": ""locale_en_46json_f7535dc0"",
        "load": "() => import("#nuxt-i18n/f7535dc0" /* webpackChunkName: "locale_en_46json_f7535dc0" */)",
        "relative": "../en.json",
      },
    ],
    "fr": [
      {
        "cache": true,
        "key": ""locale_fr_46json_3d83f3b3"",
        "load": "() => import("#nuxt-i18n/3d83f3b3" /* webpackChunkName: "locale_fr_46json_3d83f3b3" */)",
        "relative": "../fr.json",
      },
    ],
    "ja": [
      {
        "cache": true,
        "key": ""locale_ja_46json_5843ecf1"",
        "load": "() => import("#nuxt-i18n/5843ecf1" /* webpackChunkName: "locale_ja_46json_5843ecf1" */)",
        "relative": "../ja.json",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
  ],
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "key": ""locale_en_46json_7973e345"",
        "load": "() => import("#nuxt-i18n/7973e345" /* webpackChunkName: "locale_en_46json_7973e345" */)",
        "relative": "../srcDir/locales/en.json",
      },
    ],
    "es": [
      {
        "cache": false,
        "key": ""locale_es_46json_cffd8a40"",
        "load": "() => import("#nuxt-i18n/cffd8a40" /* webpackChunkName: "locale_es_46json_cffd8a40" */)",
        "relative": "../srcDir/locales/es.json",
      },
    ],
    "es-AR": [
      {
        "cache": false,
        "key": ""locale_es_46json_cffd8a40"",
        "load": "() => import("#nuxt-i18n/cffd8a40" /* webpackChunkName: "locale_es_46json_cffd8a40" */)",
        "relative": "../srcDir/locales/es.json",
      },
      {
        "cache": true,
        "key": ""locale_es_45AR_46json_d3b7c72c"",
        "load": "() => import("#nuxt-i18n/d3b7c72c" /* webpackChunkName: "locale_es_45AR_46json_d3b7c72c" */)",
        "relative": "../srcDir/locales/es-AR.json",
      },
    ],
    "fr": [
      {
        "cache": true,
        "key": ""locale_fr_46json_aa45ccf4"",
        "load": "() => import("#nuxt-i18n/aa45ccf4" /* webpackChunkName: "locale_fr_46json_aa45ccf4" */)",
        "relative": "../srcDir/locales/fr.json",
      },
    ],
    "ja": [
      {
        "cache": true,
        "key": ""locale_ja_46json_4c459061"",
        "load": "() => import("#nuxt-i18n/4c459061" /* webpackChunkName: "locale_ja_46json_4c459061" */)",
        "relative": "../srcDir/locales/ja.json",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
    {
      "code": "es",
    },
    {
      "code": "es-AR",
    },
  ],
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
  ],
}
`;

exports[`lazy 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "key": ""locale_en_46json_f7535dc0"",
        "load": "() => import("#nuxt-i18n/f7535dc0" /* webpackChunkName: "locale_en_46json_f7535dc0" */)",
        "relative": "../en.json",
      },
    ],
    "fr": [
      {
        "cache": true,
        "key": ""locale_fr_46json_3d83f3b3"",
        "load": "() => import("#nuxt-i18n/3d83f3b3" /* webpackChunkName: "locale_fr_46json_3d83f3b3" */)",
        "relative": "../fr.json",
      },
    ],
    "ja": [
      {
        "cache": true,
        "key": ""locale_ja_46json_5843ecf1"",
        "load": "() => import("#nuxt-i18n/5843ecf1" /* webpackChunkName: "locale_ja_46json_5843ecf1" */)",
        "relative": "../ja.json",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
  ],
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "key": ""locale_main_46json_291f935f"",
        "load": "() => import("#nuxt-i18n/291f935f" /* webpackChunkName: "locale_main_46json_291f935f" */)",
        "relative": "../en/main.json",
      },
    ],
    "fr": [
      {
        "cache": true,
        "key": ""locale_main_46json_7ba1ed37"",
        "load": "() => import("#nuxt-i18n/7ba1ed37" /* webpackChunkName: "locale_main_46json_7ba1ed37" */)",
        "relative": "../fr/main.json",
      },
    ],
    "ja": [
      {
        "cache": true,
        "key": ""locale_main_46json_cfa671d1"",
        "load": "() => import("#nuxt-i18n/cfa671d1" /* webpackChunkName: "locale_main_46json_cfa671d1" */)",
        "relative": "../ja/main.json",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
  ],
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
  ],
}
`;

exports[`multiple files 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "key": ""locale_en_46json_f7535dc0"",
        "load": "() => import("#nuxt-i18n/f7535dc0" /* webpackChunkName: "locale_en_46json_f7535dc0" */)",
        "relative": "../en.json",
      },
    ],
    "es": [
      {
        "cache": true,
        "key": ""locale_es_46json_234aa7ad"",
        "load": "() => import("#nuxt-i18n/234aa7ad" /* webpackChunkName: "locale_es_46json_234aa7ad" */)",
        "relative": "../es.json",
      },
    ],
    "es-AR": [
      {
        "cache": true,
        "key": ""locale_es_46json_234aa7ad"",
        "load": "() => import("#nuxt-i18n/234aa7ad" /* webpackChunkName: "locale_es_46json_234aa7ad" */)",
        "relative": "../es.json",
      },
      {
        "cache": true,
        "key": ""locale_es_45AR_46json_dab30c5d"",
        "load": "() => import("#nuxt-i18n/dab30c5d" /* webpackChunkName: "locale_es_45AR_46json_dab30c5d" */)",
        "relative": "../es-AR.json",
      },
    ],
    "fr": [
      {
        "cache": true,
        "key": ""locale_fr_46json_3d83f3b3"",
        "load": "() => import("#nuxt-i18n/3d83f3b3" /* webpackChunkName: "locale_fr_46json_3d83f3b3" */)",
        "relative": "../fr.json",
      },
    ],
    "ja": [
      {
        "cache": true,
        "key": ""locale_ja_46json_5843ecf1"",
        "load": "() => import("#nuxt-i18n/5843ecf1" /* webpackChunkName: "locale_ja_46json_5843ecf1" */)",
        "relative": "../ja.json",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
    {
      "code": "es",
    },
    {
      "code": "es-AR",
    },
  ],
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "localeLoaders": {},
  "normalizedLocales": [],
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "localeLoaders": {},
  "normalizedLocales": [],
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "key": ""locale_en_46json_f7535dc0"",
        "load": "() => import("#nuxt-i18n/f7535dc0" /* webpackChunkName: "locale_en_46json_f7535dc0" */)",
        "relative": "../en.json",
      },
    ],
    "fr": [
      {
        "cache": true,
        "key": ""locale_fr_46json_3d83f3b3"",
        "load": "() => import("#nuxt-i18n/3d83f3b3" /* webpackChunkName: "locale_fr_46json_3d83f3b3" */)",
        "relative": "../fr.json",
      },
    ],
    "ja": [
      {
        "cache": true,
        "key": ""locale_ja_46json_5843ecf1"",
        "load": "() => import("#nuxt-i18n/5843ecf1" /* webpackChunkName: "locale_ja_46json_5843ecf1" */)",
        "relative": "../ja.json",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
  ],
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
    },
  ],
}
`;
